--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -5,7 +5,7 @@
   <%= simple_form_for @user, { url: update_profile_users_path, method: :put, html: { class: 'form-inline form'} } do |f| %>
 
     <%=f.input :full_name, required: true, input_html: {class: 'form-control'} %>
-    <%=f.input :email, required: true, input_html: {class: 'form-control'} %>
+    <%=f.input :email, required: true, input_html: {class: 'form-control'}, disabled: true %>
     <%=f.input :phone, label: 'Phone', input_html: {class: 'form-control'} %>
 
     <div class='form-group form-action-group'>
