--- a/app/views/memberships/_members.html.erb
+++ b/app/views/memberships/_members.html.erb
@@ -4,7 +4,9 @@
       <tr>
         <td>Full Name</td>
         <td>Email</td>
+        <td align="center">Email Alert</td>
         <td>Phone</td>
+        <td align="center">SMS Alert</td>
         <% if group_with_role.has_admin_role? %>
           <td class='td-last'> Action </td>
         <% end %>
@@ -18,7 +20,17 @@
         <tr id='membership-<%=membership.id%>'>
           <td><%= membership.member.full_name %></td>
           <td><%= membership.member.email %></td>
+          <td align="center">
+            <% if membership.member.email_alert %>
+              <i class='glyphicon glyphicon-envelope'> </i>
+            <% end %>
+          </td>          
           <td><%= membership.member.phone %></td>
+          <td align="center">
+            <% if membership.member.sms_alert %>
+              <i class='glyphicon glyphicon-phone'> </i>
+            <% end %>
+          </td>          
           <% if group_with_role.has_admin_role? %>
             <td><%= link_destroy ' ', membership_path(membership.id), class: 'remove-member', data: {id: membership.id} %></td>
           <% end %>
