adjust ui style on group message

--- a/app/views/group_messages/new.html.erb
+++ b/app/views/group_messages/new.html.erb
@@ -15,11 +15,11 @@
     </div>
 
     <div class="form-group horizontal-group">
-      <label style="vertical-align: top" class="control-label">Message By</label>
-      <div class="checkbox-list">
-        <span style="height: 30px;"><%= f.check_box :email_alert %> Email</span>
+      <label class="control-label"></label>
+      <span class="vertical-checkbox-list" style="background-color: #f5f5f5; padding: 8px 15px;width: 370px; display: inline-block;">
+        <span style="height: 30px;"><%= f.check_box :email_alert %> Email</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <span style="height: 30px;"><%= f.check_box :sms_alert %> SMS</span>
-      </div>
+      </span>
     </div>
 
     <div class='form-group'>
