--- a/app/views/alert_mailer/notify_matched.html.erb
+++ b/app/views/alert_mailer/notify_matched.html.erb
@@ -1,14 +1,13 @@
 
 <%= content_for(:mailer_header) do %>
-  <h3><%= link_to @alert.name, matched_alert_feed_entries_url(@alert.id, from: @date_range.from, to:@date_range.to) %> </h3>
+  <h3><%= link_to @alert.name, matched_alert_feed_entries_url(@alert.id) %> </h3>
   
   <p style='color:gray; font-size: 90%; font-style:italic;'>
     <a href='<%= @alert.url %>'> <%= @alert.url %> </a>
   </p>
 
   <p style='color:gray; font-size: 90%; font-style:italic;'>
-    <b><%= @search_highlight.size %></b> feed entries that matched the keywords criteria from 
-    <%= @date_range.from.to_date %>, to <%=@date_range.to.to_date %> for group :
+    <b><%= @search_highlight.size %></b> feed entries that matched the keywords criteria
     <b><%= "#{@group_name}" %></b>
   </p>
 <% end %>
