--- a/app/views/layouts/shared/_notification.html.erb
+++ b/app/views/layouts/shared/_notification.html.erb
@@ -2,12 +2,12 @@
 <div id='notification'> </div>
 
 <script id='tmpl-notification' type="text/x-tmpl">
-  <div class="bs-callout bs-callout-{%=o.type%}">
+  <div class="alert alert-{%=o.type%}" role="alert">
     <h4>
       <span class='glyphicon glyphicon-{%=o.icon%}'> </span>
       {%=o.title%}
     </h4>
-    
+
     <p>{%=o.body%}</p>
   </div>
 </script>
