--- a/app/views/group_messages/new.html.erb
+++ b/app/views/group_messages/new.html.erb
@@ -2,29 +2,32 @@
 <% breadcrumb_buffer([{ "Send Group Message": nil}]) %>
 
 <%= panel "Send Group Message" do %>
-  <%=simple_form_for(@group_message, html: { class: 'form-inline form'}) do |f| %>
+  <%=simple_form_for(@group_message, html: { class: 'form-inline form', style: 'padding-left:8px'}) do |f| %>
     <div class="form-group horizontal-group">
       <label class="control-label required" style="vertical-align: top"><abbr>*</abbr> To Groups </label>
-      <div class="checkbox-list">
-        <%= f.collection_check_boxes :receiver_groups, current_user.groups, :id, :name, include_hidden: false do |group| %>
-          <%= group.check_box({checked: false}) %>
+      <div class="checkbox-list" style= 'padding-left:8px'>
+        <%= f.collection_check_boxes :receiver_groups, current_user.groups, :id, :name, checked: @group_message.receiver_groups, include_hidden: false do |group| %>
+          <%= group.check_box %>
           <%= group.text %>
         <% end -%>
       </div>
       <%= f.error :receiver_groups %>
     </div>
 
-    <div class="form-group horizontal-group">
+    <div class="form-group">
       <label class="control-label"></label>
-      <span class="vertical-checkbox-list" style="background-color: #f5f5f5; padding: 8px 15px;width: 365px; display: inline-block;">
-        <span style="height: 30px;"><%= f.check_box :email_alert %> Email</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <span style="height: 30px;"><%= f.check_box :sms_alert %> SMS</span>
+      <span style="background-color: #f5f5f5; padding: 8px;">
+        <%= f.collection_check_boxes :alert_type, GroupMessage::ALERT_TYPE, :first, :last, checked: @group_message.alert_type, include_hidden: false do |type| %>
+          <%= type.check_box %>
+          <%= type.text %>
+        <% end -%>
       </span>
+      <%= f.error :alert_type %>
     </div>
-
     <div class='form-group'>
       <label class="control-label required" style="vertical-align: top">Type a message here</label>
       <%= f.text_area :message, as: :text, class: 'form-control', rows: 6, cols: 40, maxlength: 140 %>
+      <%= f.error :message %>
     </div>
 
     <div class="form-group">
@@ -40,5 +43,5 @@
       <%=f.submit 'Send', label: false, class: 'btn btn-primary btn-app' %>
     </div>
 
-  <% end %>  
-<% end %>  
+  <% end %>
+<% end %>
