update email footer

--- a/app/views/layouts/mailer/_contact.html.erb
+++ b/app/views/layouts/mailer/_contact.html.erb
@@ -1,35 +1,31 @@
-<table class="social" width="100%">
+<table class="social" width="100%" style='margin-top: 60px;'>
   <tr>
     <td>
       <table align="left" class="column">
         <tr>
           <td>
-            
             <h5 class="">Connect with Us:</h5>
             <p class="">
               <a href="https://www.facebook.com/iLabSEA" class="soc-btn fb">Facebook</a>
               <a href="https://twitter.com/ilabsea" class="soc-btn tw">Twitter</a>
-              <a href="https://plus.google.com/106154230998667227350/posts" class="soc-btn gp">Google+</a>
+              <a href="http://ilabsoutheastasia.org" class="soc-btn ws">Website</a>
             </p>
-
           </td>
         </tr>
       </table>
-      
+
       <!-- column 2 -->
       <table align="left" class="column">
         <tr>
           <td>
             <h5 class="">Contact Info:</h5>
             <p>
-              Phone: <strong>078 777457</strong><br/>
-
               Email: <strong> <%=link_to ENV['SUPPORT_EMAIL'], "mailto:#{ENV['SUPPORT_EMAIL']}" %></strong>
             </p>
           </td>
         </tr>
       </table><!-- /column 2 -->
-      
+
       <span class="clear"></span>
     </td>
   </tr>
