--- a/app/views/alerts/_alert_keywords.html.erb
+++ b/app/views/alerts/_alert_keywords.html.erb
@@ -1,17 +1,17 @@
 <div class="header-wrapper clearfix">
-  <div class="pull-left"><h3 class='header-title'>Keywords to Search for</h3></div>
+  <div class="pull-left"><h3 class='header-title'>Keyword Sets to search for</h3></div>
 
   <div class="pull-right">
     <% if project_with_role.has_admin_role? %>
       <div id='alert-keyword'>
         <div class="input-group search-wrapper">
-          <input type="text" 
-                class="form-control typeahead" placeholder="Keyword"
+          <input type="text"
+                class="form-control typeahead" placeholder="Keyword Set"
                 id="alert-keyword-typeahead"
                 data-url="<%= new_keywords_alert_path(alert) %>" >
 
           <span class="input-group-btn">
-            <%= link_to "Add Keyword", alert_alert_keywords_path(alert), class: 'btn btn-primary btn-app typeahead-add', id: 'add-alert-keyword' %>
+            <%= link_to "Add Keyword Set", alert_alert_keywords_path(alert), class: 'btn btn-primary btn-app typeahead-add', id: 'add-alert-keyword' %>
           </span>
         </div>
 
