fix tagify style & keyword logic

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "bootstrap-switch";
 
 @import "tagify";
+@import "base/tagify";
 
 @import "shared/nav_menu";
 @import "shared/jquery.timepicker";
